# verisynth

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/agents/: implementer.md
.github/workflows/: ci.yml  publish-kernels.yml  publish-python.yml
docs/: ARCHITECTURE.md  RELEASING.md
examples/: retail.yaml
examples/olist/: EXPLAIN.md  README.md  metadata.olist.yaml  prepare_crm_data.py  prepare_data.py  prepare_docs_data.py  prepare_inventory_data.py  skeleton.yaml
examples/olist/data/: crm_contacts.parquet  crm_tickets.parquet  customers.parquet  edi_shipments.parquet  inv_products.parquet  inv_shipments.parquet  order_items.parquet  order_payments.parquet  order_reviews.parquet  orders.parquet  web_orders.parquet
examples/olist/schemas/: edi_common.xsd  edi_shipment.xsd  shop_customer.schema.json  web_common.schema.json  web_order.schema.json
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs  xmlstream.rs
tests/: test_cli_e2e.py  test_copula.py  test_distributions.py  test_documents.py  test_engine.py  test_explain.py  test_fit.py  test_init.py  test_kernels.py  test_metadata.py  test_olist_integration.py  test_partition.py  test_rust_kernels.py  test_scanner.py  test_temporal.py  test_wizard.py  test_xmlstream.py  test_xmlstream_rust.py
verisynth/: __init__.py  _reference.py  _skeleton_infer.py  backbone.py  cli.py  copula.py  distributions.py  documents.py  engine.py  explain.py  fit.py  kernels.py  metadata.py  partition.py  privacy.py  scanner.py  temporal.py  transforms.py  wizard.py  xmlstream.py
