[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verisynth"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pyarrow",
    "duckdb",
    "polars",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-timeout", "maturin"]

[project.scripts]
verisynth = "verisynth.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Fail (with a full thread traceback) any test that runs longer than this,
# so an intermittent deadlock surfaces as a pinpointed failure instead of
# freezing the CI job until the 6h GitHub default. The signal method fires
# SIGALRM on the main thread, which also interrupts a blocked spawn-pool
# `map()` in the parallel XML-ingest tests.
timeout = 300
timeout_method = "signal"

[tool.setuptools]
packages = ["verisynth"]
